Title overlap Fixed

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -33,6 +33,7 @@ text/css custom.css ( ASCII text )
     color: #4c78dd;
     text-decoration: none;
 	font-weight: 600;
+	line-height: 22px;
 }
 .btnminwidth{
 	min-width:205px;
